# CFD

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  BRANCH_PROTECTION_SETUP.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  README.md  ROADMAP.md  build.ps1  build.sh  build_log.txt  build_log_all.txt  build_log_all_2.txt  build_log_lib.txt  build_log_test.txt  release.sh
build-release/: animated_flow_simulation  basic_simulation  custom_boundary_conditions  minimal_example  performance_comparison  (+10 more)
lib/: CMakeLists.txt  README.md  cfd_libraryConfig.cmake.in
lib/include/: cfd_status.h  csv_output.h  derived_fields.h  field_ops.h  grid.h  output_registry.h  simulation_api.h  solver.h  solver_gpu.h  solver_interface.h  utils.h  vtk_output.h
lib/include/cfd/api/: simulation_api.h
lib/include/cfd/boundary/: boundary_conditions.h  boundary_conditions_gpu.cuh
lib/include/cfd/core/: boundary_conditions.h  boundary_conditions_gpu.cuh  cfd_init.h  cfd_status.h  cfd_version.h  cpu_features.h  derived_fields.h  field_ops.h  filesystem.h  gpu_device.h  grid.h  indexing.h  logging.h  math_utils.h  memory.h  utils.h
lib/include/cfd/io/: checkpoint.h  csv_output.h  output_registry.h  vtk_output.h
lib/include/cfd/math/: stencils.h
lib/include/cfd/solvers/: energy_solver.h  navier_stokes_solver.h  poisson_solver.h  solver_gpu.h  solver_interface.h
lib/src/: grid.c  simulation_api.c  solver.c  solver_optimized.c  solver_stable.c  utils.c  vtk_output.c
lib/src/api/: output_registry.c  simulation_api.c  solver_registry.c
lib/src/boundary/: boundary_conditions.c  boundary_conditions_core_impl.h  boundary_conditions_inlet_common.h  boundary_conditions_internal.h  boundary_conditions_outlet_common.h  boundary_conditions_outlet_simd.h  boundary_conditions_simd_impl.h  boundary_conditions_time.h
lib/src/boundary/avx2/: boundary_conditions_avx2.c  boundary_conditions_avx2_omp.c  boundary_conditions_inlet_avx2.c  boundary_conditions_inlet_avx2_omp.c  boundary_conditions_outlet_avx2.c  boundary_conditions_outlet_avx2_omp.c
lib/src/boundary/cpu/: boundary_conditions.c  boundary_conditions_inlet_scalar.c  boundary_conditions_inlet_time_scalar.c  boundary_conditions_outlet_scalar.c  boundary_conditions_scalar.c
lib/src/boundary/gpu/: boundary_conditions_gpu.cu  boundary_conditions_inlet_gpu.cu
lib/src/boundary/neon/: boundary_conditions_inlet_neon.c  boundary_conditions_inlet_neon_omp.c  boundary_conditions_neon.c  boundary_conditions_neon_omp.c  boundary_conditions_outlet_neon.c  boundary_conditions_outlet_neon_omp.c
lib/src/boundary/omp/: boundary_conditions_inlet_omp.c  boundary_conditions_omp.c  boundary_conditions_outlet_omp.c
lib/src/boundary/simd/: boundary_conditions_simd.c  boundary_conditions_simd_dispatch.c
lib/src/boundary/simd_omp/: boundary_conditions_simd_omp_dispatch.c
lib/src/core/: boundary_conditions.c  boundary_conditions_gpu.cu  boundary_conditions_internal.h  boundary_conditions_omp.c  boundary_conditions_simd.c  cfd_init.c  cfd_threading_internal.h  cfd_version.c  cpu_features.c  derived_fields.c  field_ops.c  filesystem.c  grid.c  logging.c  math_utils.c  memory.c  utils.c
lib/src/io/: checkpoint.c  csv_output.c  csv_output.h.bak  csv_output_internal.h  vtk_output.c  vtk_output_internal.h
lib/src/solvers/cpu/: solver_explicit_euler.c  solver_projection.c
lib/src/solvers/energy/: energy_solver_internal.h
lib/src/solvers/energy/avx2/: energy_solver_avx2.c
lib/src/solvers/energy/cpu/: energy_solver.c
lib/src/solvers/energy/omp/: energy_solver_omp.c
lib/src/solvers/gpu/: gpu_shared_kernels.cuh  solver_gpu_stub.c  solver_projection_gpu.cu  solver_projection_jacobi_gpu.cu  solver_rk_gpu.cu
lib/src/solvers/linear/: linear_solver.c  linear_solver_internal.h
lib/src/solvers/linear/avx2/: linear_solver_bicgstab_avx2.c  linear_solver_cg_avx2.c  linear_solver_cg_avx2_omp.c  linear_solver_jacobi_avx2.c  linear_solver_jacobi_avx2_omp.c  linear_solver_redblack_avx2.c  linear_solver_redblack_avx2_omp.c  linear_solver_sor_avx2.c
lib/src/solvers/linear/cpu/: linear_solver_bicgstab.c  linear_solver_cg.c  linear_solver_jacobi.c  linear_solver_redblack.c  linear_solver_sor.c
lib/src/solvers/linear/gpu/: poisson_cg_gpu_solve.cuh  poisson_gpu_primitives.cuh  poisson_solver_bicgstab_gpu.cu  poisson_solver_cg_gpu.cu  poisson_solver_jacobi_gpu.cu  poisson_solver_redblack_sor_gpu.cu
lib/src/solvers/linear/neon/: linear_solver_bicgstab_neon.c  linear_solver_cg_neon.c  linear_solver_cg_neon_omp.c  linear_solver_jacobi_neon.c  linear_solver_jacobi_neon_omp.c  linear_solver_redblack_neon.c  linear_solver_redblack_neon_omp.c  linear_solver_sor_neon.c
lib/src/solvers/linear/omp/: linear_solver_cg_omp.c  linear_solver_redblack_omp.c
lib/src/solvers/linear/simd/: linear_solver_jacobi_simd.c  linear_solver_redblack_simd.c  linear_solver_simd_dispatch.c
lib/src/solvers/linear/simd_omp/: linear_solver_simd_omp_dispatch.c
lib/src/solvers/linear/simd_template/: linear_solver_bicgstab_simd_template.h
lib/src/solvers/navier_stokes/: boundary_copy_utils.h
lib/src/solvers/navier_stokes/avx2/: solver_explicit_euler_avx2.c  solver_projection_avx2.c  solver_rk2_avx2.c  solver_rk4_avx2.c
lib/src/solvers/navier_stokes/avx2_omp/: solver_explicit_euler_avx2_omp.c  solver_projection_avx2_omp.c
lib/src/solvers/navier_stokes/cpu/: solver_explicit_euler.c  solver_projection.c  solver_rk2.c  solver_rk4.c
lib/src/solvers/navier_stokes/momentum_rhs/: ns_momentum_rhs_avx2.h  ns_momentum_rhs_omp.h  ns_momentum_rhs_scalar.h
lib/src/solvers/navier_stokes/omp/: solver_explicit_euler_omp.c  solver_projection_omp.c  solver_rk2_omp.c  solver_rk4_omp.c
lib/src/solvers/omp/: solver_explicit_euler_omp.c  solver_projection_omp.c
lib/src/solvers/simd/: poisson_common_simd.c  poisson_jacobi_simd.c  poisson_redblack_simd.c  poisson_solver_simd.h  solver_explicit_euler_simd.c  solver_projection_simd.c
lib/src/solvers/simd_omp/: solver_explicit_euler_simd_omp.c  solver_projection_simd_omp.c
(+202 files in other folders)
